--- a/pybank/main.ipynb
+++ b/pybank/main.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Author: Martin Rasumoff\n",
     "import pandas as pd"
    ]
   },
@@ -238,6 +239,23 @@
     "print(f\"Average Change: ${avg_change}\")\n",
     "print(f\"Greatest Increase in Profits: {month_max_profit} (${max_profit})\")\n",
     "print(f\"Greatest Decrease in Profits: {month_max_loss} (${max_loss})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a\")"
    ]
   },
   {
